[package]
name = "nix-store-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bytes = "1.9.0"
chrono = "0.4.39"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
itertools = "0.14.0"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
moka = { version = "0.12.10", features = ["future"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
